fixed alignments, removed uncessary code and created new file for font styles

--- a/src/Styling/Home.css
+++ b/src/Styling/Home.css
@@ -1,26 +1,7 @@
 .Home {
-  z-index: -1;
+  z-index: 0;
   position: absolute;
 }
-/* font styles */
-.Style_1 {
-  font-family: 'Poppins';
-  color: #DE5B31;
-  font-size: clamp(0.5rem, 10.25vw, 7.25rem);
-}
-
-#Style_1_transparent {
-  color: transparent;
-  -webkit-text-stroke: 1px #fff;
-}
-
-.Style_2 {
-  font-weight: 400;
-  font-family: 'Roboto Mono';
-  color: #fff;
-  font-size: clamp(0.25rem, 3.25vw, 1.25rem);
-}
-
 /* Hero section */
 .Hero_section {
   height: 100vh;
@@ -87,29 +68,23 @@
 /* screen width size 468 or smaller */
 @media only screen and (max-width: 468px) {
 
-    /* Hero section */
-    .Scroll_indicator {
-      margin-left: 20px;
-    }
+  /* Hero section */
+  .Scroll_indicator {
+    margin-left: 20px;
+  }
 
-    .Indicator_image {
-      width: 40px;
-   }  
-
+  .Indicator_image {
+    width: 40px;
+  }  
 }
 
 /* Media Query  Height */
 /* screen Height size 776 or lower */
 @media only screen and (max-height: 776px) {
 
-     /* Hero section */
-    .Style_2 {
-      font-size: clamp(0.25rem, 3.75vh, 1rem);
-    }
-   
-    .Indicator_image {
-      width: 40px;
-      margin-bottom: 50px;
-    }  
-
+  /* Hero section */
+  .Indicator_image {
+    width: 40px;
+    margin-bottom: 50px;
+  }  
 }
